fix(lichess): change move dest indicator to overlay1 as themed board made them invisible

--- a/styles/lichess/catppuccin.user.less
+++ b/styles/lichess/catppuccin.user.less
@@ -398,7 +398,7 @@
 
     square.move-dest {
       background: radial-gradient(
-        fade(@accent, 50%) 19%,
+        @overlay1 19%,
         rgba(0, 0, 0, 0) 20%
       );
     }
